--- a/backend/internal/compile/client.html
+++ b/backend/internal/compile/client.html
@@ -18,6 +18,6 @@
 	<body>
 		<div id="root"></div>
 
-		<script src="/app-resources/__APP_ID__/bootstrap.js"></script>
+		<script src="__APP_SCRIPT_URL__"></script>
 	</body>
 </html>
