--- a/backend/internal/compile/not-found.html
+++ b/backend/internal/compile/not-found.html
@@ -2,7 +2,16 @@
 <html>
 	<head>
 		<style>
-			.body {
+			html,
+			body {
+				margin: 0px;
+				padding: 0px;
+
+				height: 100%;
+				width: 100%;
+			}
+
+			div.error-wrapper {
 				width: 100%;
 				height: 100%;
 				max-height: 100vh;
@@ -13,7 +22,7 @@
 				box-sizing: border-box;
 			}
 
-			.header {
+			h1.header {
 				padding: 0;
 				margin: 0;
 				font-size: 2.25rem;
@@ -21,7 +30,7 @@
 		</style>
 	</head>
 	<body>
-		<div class="body">
+		<div class="error-wrapper">
 			<h1 class="header">App not found: "__APP_ID__" is an invalid ID</h1>
 		</div>
 	</body>
