--- a/backend/internal/compile/not-found.html
+++ b/backend/internal/compile/not-found.html
@@ -28,6 +28,8 @@
 				font-size: 2.25rem;
 			}
 		</style>
+
+        <title>App Not Found | Robin</title>
 	</head>
 	<body>
 		<div class="error-wrapper">
