--- a/backend/internal/compile/error.html
+++ b/backend/internal/compile/error.html
@@ -33,7 +33,7 @@
 	</head>
 	<body>
 		<div class="error-wrapper">
-			<h1 class="header">App not found: "__APP_ID__" is an invalid ID</h1>
+			<h1 class="header">__ERROR_TEXT__</h1>
 		</div>
 	</body>
 </html>
