--- a/backend/internal/compile/error.html
+++ b/backend/internal/compile/error.html
@@ -29,7 +29,7 @@
 			}
 		</style>
 
-		<title>App Not Found | Robin</title>
+		<title>App Build Error | Robin</title>
 	</head>
 	<body>
 		<div class="error-wrapper">
