--- a/backend/internal/compile/client.html
+++ b/backend/internal/compile/client.html
@@ -6,6 +6,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<title>{{.AppConfig.Name}}</title>
+
+	<link rel="stylesheet" href="https://unpkg.com/normalize.css@8.0.1/normalize.css">
+	<style>
+		html {
+			font-size: 16px;
+			font-family: sans-serif;
+		}
+	</style>
 </head>
 <body>
 	<div id="root"></div>
