switch to esm.sh instead of unpkg

--- a/backend/internal/compile/client.html
+++ b/backend/internal/compile/client.html
@@ -7,7 +7,7 @@
 
 	<title>{{.AppConfig.Name}}</title>
 
-	<link rel="stylesheet" href="https://unpkg.com/normalize.css@8.0.1/normalize.css">
+	<link rel="stylesheet" href="https://esm.sh/normalize.css">
 	<style>
 		html {
 			font-size: 16px;
