update client bundle to be inline

--- a/backend/internal/compile/client.html
+++ b/backend/internal/compile/client.html
@@ -32,6 +32,8 @@
 				);
 			});
 		</script>
-		<script src="{{.ScriptURL}}"></script>
+		<script>
+			{{.ScriptSource}}
+		</script>
 	</body>
 </html>
